--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,6 +45,7 @@ body {
     font-size: 16px;
     padding: 3px 8px;
     border: 1px solid rgb(211, 211, 211);
+    color: black;
 }
 
 .pesquisar__label {
@@ -219,7 +220,7 @@ body {
 .videos__item:hover {
     transform: scale(1.3);
     background-color: var(--azul-claro);
-    z-index: 2;
+    z-index: 1;
     transition: .5s;
 }
 
@@ -248,6 +249,23 @@ body {
     color: var(--azul-medio);
     font-weight: bold;
     padding: 10px 0 20px 0;
+}
+
+.excluir-video {
+    color: var(--cinza-texto);
+    font-size: 1em;
+    font-weight: bold;
+    background-color: white;
+    border-radius: 20px;
+    padding: 2px 5px;
+    cursor: pointer;
+    float: right;
+}
+
+.excluir-video:hover {
+    color: white;
+    background-color: var(--azul-escuro);
+    transition: .5s;
 }
 
 @media(min-width: 834px) {
@@ -287,7 +305,9 @@ body {
     }
 
     .videos__item:hover {
-        transform: scale(1.3);
+        transform: scale(1.02);
+        transition: transform 0.3s ease-in-out;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
     /* ESTILOS RODAPÉ */
